for nova compute node installation scripts

--- a/nova_raw.conf
+++ b/nova_raw.conf
@@ -82,7 +82,7 @@ password = PLACEMENT_PASS
 [vmware]
 [vnc]
 enabled = true
-vncserver_listen = $my_ip
+vncserver_listen = 0.0.0.0
 vncserver_proxyclient_address = $my_ip
 [workarounds]
 [wsgi]
