--- a/nova_raw.conf
+++ b/nova_raw.conf
@@ -47,6 +47,17 @@ password = NOVA_PASS
 [metrics]
 [mks]
 [neutron]
+url = http://CONTROLLER_HOSTNAME:9696
+auth_url = http://CONTROLLER_HOSTNAME:35357
+auth_type = password
+project_domain_name = default
+user_domain_name = default
+region_name = RegionOne
+project_name = service
+username = neutron
+password = NEUTRON_PASS
+service_metadata_proxy = true
+metadata_proxy_shared_secret = METADATA_SECRET
 [notifications]
 [osapi_v21]
 [oslo_concurrency]
