--- a/nova_compute_raw.conf
+++ b/nova_compute_raw.conf
@@ -1,6 +1,6 @@
 [DEFAULT]
 enabled_apis = osapi_compute,metadata
-transport_url = rabbit://openstack:RABBIT_PASS@controller
+transport_url = rabbit://openstack:RABBIT_PASS@CONTROLLER_HOSTNAME
 my_ip = MANAGEMENT_INTERFACE_IP_ADDRESS
 use_neutron = True
 firewall_driver = nova.virt.firewall.NoopFirewallDriver
@@ -22,7 +22,7 @@ auth_strategy = keystone
 [ephemeral_storage_encryption]
 [filter_scheduler]
 [glance]
-api_servers = http://controller:9292
+api_servers = http://CONTROLLER_HOSTNAME:9292
 [guestfs]
 [healthcheck]
 [hyperv]
@@ -30,9 +30,9 @@ api_servers = http://controller:9292
 [ironic]
 [key_manager]
 [keystone_authtoken]
-auth_uri = http://controller:5000
-auth_url = http://controller:35357
-memcached_servers = controller:11211
+auth_uri = http://CONTROLLER_HOSTNAME:5000
+auth_url = http://CONTROLLER_HOSTNAME:35357
+memcached_servers = CONTROLLER_HOSTNAME:11211
 auth_type = password
 project_domain_name = default
 user_domain_name = default
@@ -45,6 +45,15 @@ virt_type = qemu
 [metrics]
 [mks]
 [neutron]
+url = http://CONTROLLER_HOSTNAME:9696
+auth_url = http://CONTROLLER_HOSTNAME:35357
+auth_type = password
+project_domain_name = default
+user_domain_name = default
+region_name = RegionOne
+project_name = service
+username = neutron
+password = NEUTRON_PASS
 [notifications]
 [osapi_v21]
 [oslo_concurrency]
@@ -63,7 +72,7 @@ project_domain_name = Default
 project_name = service
 auth_type = password
 user_domain_name = Default
-auth_url = http://controller:35357/v3
+auth_url = http://CONTROLLER_HOSTNAME:35357/v3
 username = placement
 password = PLACEMENT_PASS
 [quota]
@@ -82,7 +91,7 @@ password = PLACEMENT_PASS
 enabled = True
 vncserver_listen = 0.0.0.0
 vncserver_proxyclient_address = $my_ip
-novncproxy_base_url = http://controller:6080/vnc_auto.html
+novncproxy_base_url = http://CONTROLLER_HOSTNAME:6080/vnc_auto.html
 [workarounds]
 [wsgi]
 [xenserver]
